@@ -39,6 +39,7 @@
                 onCancelReconnecting = id; 
                 onChannelAutoOp = id; 
                 onChannelProperties = id; 
+                onClearScrollback = id; 
                 onConnect = id; 
                 onCopyAddress = id; 
                 onCopyServer = id; 
@@ -49,6 +50,7 @@
                 onDisconnect = id; 
                 onJoin = id; 
                 onLeave = id; 
+                onMarkScrollback = id; 
                 onMemberAutoOp = id; 
                 onMemberClientInfo = id; 
                 onMemberDeop = id; 
