@@ -7,19 +7,19 @@
 	<key>IBEditorPositions</key>
 	<dict>
 		<key>29</key>
-		<string>352 1125 470 44 0 0 1920 1178 </string>
+		<string>295 976 470 44 0 0 1680 1028 </string>
 		<key>327</key>
-		<string>1118 976 128 180 0 0 1920 1178 </string>
+		<string>963 817 184 211 0 0 1680 1028 </string>
 		<key>367</key>
-		<string>1277 1104 124 49 0 0 1920 1178 </string>
+		<string>1106 957 124 49 0 0 1680 1028 </string>
 		<key>374</key>
-		<string>332 826 199 187 0 0 1920 1178 </string>
+		<string>286 701 200 237 0 0 1680 1028 </string>
 		<key>387</key>
-		<string>577 936 150 80 0 0 1920 1178 </string>
+		<string>499 808 150 80 0 0 1680 1028 </string>
 		<key>426</key>
-		<string>796 993 101 49 0 0 1920 1178 </string>
+		<string>691 861 101 49 0 0 1680 1028 </string>
 		<key>432</key>
-		<string>925 989 130 49 0 0 1920 1178 </string>
+		<string>801 858 130 49 0 0 1680 1028 </string>
 	</dict>
 	<key>IBFramework Version</key>
 	<string>446.1</string>
@@ -29,16 +29,16 @@
 	<integer>3</integer>
 	<key>IBOpenObjects</key>
 	<array>
-		<integer>387</integer>
 		<integer>327</integer>
-		<integer>426</integer>
-		<integer>29</integer>
-		<integer>432</integer>
-		<integer>367</integer>
 		<integer>21</integer>
+		<integer>432</integer>
 		<integer>374</integer>
+		<integer>387</integer>
+		<integer>426</integer>
+		<integer>367</integer>
+		<integer>29</integer>
 	</array>
 	<key>IBSystem Version</key>
-	<string>8R2232</string>
+	<string>8R2218</string>
 </dict>
 </plist>
